--- a/gb/21/5/21/n12965757.md
+++ b/gb/21/5/21/n12965757.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/uczxkr3180/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uczxkr3180/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uczxkr3180/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uczxkr3180/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uczxkr3180/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uczxkr3180/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>融入部落文化 赛德克文化馆获建筑园冶奖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965759-499062-600x400.jpg" />
 <h6>文化馆周边融入部落文化元素后很吸睛，串联部落各体验场域后，成为开放式的“赛德克文化生活馆”。（水保局提供）
 </h6>
 <hr>
-<p>【大纪元2021年05月21日讯】（大纪元记者林萌骞台湾南投报导）仁爱乡中原部落“<ahref="https://github.com/uczxkr3180/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>文化生活馆”近期启用，不但保留原始水塔来纪念迁居后辛苦取水耕种的历史，更融入部落文化元素，而成为特色打卡点，还荣获2021<ahref="https://github.com/uczxkr3180/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>。</p>
-<p>“<ahref="https://github.com/uczxkr3180/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>文化生活馆”是由中原部落的赛德克族人与部落厨房及水土保持局共同携手，串连部落狩猎、织布、祈福等文化体验及在地农产，所打造出的开放式空间。</p>
+<p>【大纪元2021年05月21日讯】（大纪元记者林萌骞台湾南投报导）仁爱乡中原部落“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>文化生活馆”近期启用，不但保留原始水塔来纪念迁居后辛苦取水耕种的历史，更融入部落文化元素，而成为特色打卡点，还荣获2021<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>。</p>
+<p>“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>文化生活馆”是由中原部落的赛德克族人与部落厨房及水土保持局共同携手，串连部落狩猎、织布、祈福等文化体验及在地农产，所打造出的开放式空间。</p>
 <figure id="12965760" aria-describedby="caption-12965760" style="width: 599px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/05/id12965760-499063-450x428.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965760-499063-450x428.jpg" alt="赛德克族的织布技艺、弓箭狩刀、成年礼和猫头鹰守护神的故事，十分值得探索与认识。" width="599" b="570" /></a><figcaption id="caption-12965760" class="wp-caption-text">赛德克族的织布技艺、弓箭狩刀、成年礼和猫头鹰守护神的故事，十分值得探索与认识。（水保局提供）</figcaption></figure>
 <h2>整个部落就是文化生活馆</h2>
 <p>部落厨房执行长王翊諠指出，赛德克族移居北港溪上游已有百年，走访现今中原部落的街道，还能隐约看到日治时期的建筑脉络，以及族人镂刻在每个空间角落里的文化、产业与故事。</p>
@@ -19,54 +19,54 @@
 <h2>部落厨房携手中原部落发展文化体验与在地好物</h2>
 <p>水保局副局长林长立则谈到，“部落厨房”深耕中原部落多年，除携手推广部落以友善耕作方式生产稻米等农产外，现在更进一步结合赛德克文化馆发展部落文化体验游程及产业。</p>
 <p>林长立也期待访客在疫情趋缓后来趟赛德克文化探索之旅，感受中原部落族人特有的纯朴、热情与祝福。</p>
-<figure id="12965761" aria-describedby="caption-12965761" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/05/id12965761-499064-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965761-499064-450x338.jpg" alt="中原部落保留原始水塔来纪念迁居后的生活历史，更融入文化元素而营造成为特色打卡点，因而荣获建筑园冶奖。" width="601" b="451" /></a><figcaption id="caption-12965761" class="wp-caption-text">中原部落保留原始水塔来纪念迁居后的生活历史，更融入文化元素而营造成为特色打卡点，因而荣获<ahref="https://github.com/uczxkr3180/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>。（水保局提供）</figcaption></figure>
+<figure id="12965761" aria-describedby="caption-12965761" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/05/id12965761-499064-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/05/id12965761-499064-450x338.jpg" alt="中原部落保留原始水塔来纪念迁居后的生活历史，更融入文化元素而营造成为特色打卡点，因而荣获建筑园冶奖。" width="601" b="451" /></a><figcaption id="caption-12965761" class="wp-caption-text">中原部落保留原始水塔来纪念迁居后的生活历史，更融入文化元素而营造成为特色打卡点，因而荣获<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91%E5%9B%AD%E5%86%B6%E5%A5%96.md#1">建筑园冶奖</a>。（水保局提供）</figcaption></figure>
 <p>责任编辑：唐音</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/4/6/n10282918.md#1">这位赛德克阿嬷手里的编织 沉淀有耆老智慧 有趣更惊艳</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/19/8/17/n11459434.md#1">赛德克族传统婚礼   让更多人了解原住民族文化</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/20/5/5/n12084515.md#1">南投两国小一社区 获2020建筑园冶奖</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/4/14/n12879351.md#1">嘉市“步行散策 乐活水岸”获2021年建筑园冶奖</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/4/26/n12906497.md#1">浪漫织缘  赛德克与排湾族的编织对话</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/14/n12948844.md#1">彰化县再度荣获建筑园冶奖 绩效出色</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/21/n12965176.md#1">防疫期间 彰化荣家DIY盆栽名片夹</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/21/n12965168.md#1">大学申请入学分发 大叶大学分发率逾94％</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/21/n12965172.md#1">宫庙赠员林市公所喷雾器 齐心对抗疫情</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12963079.md#1">南投检出两例阳性 是否确诊以中央公布为凖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/4/6/n10282918.md#1">这位赛德克阿嬷手里的编织 沉淀有耆老智慧 有趣更惊艳</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/17/n11459434.md#1">赛德克族传统婚礼   让更多人了解原住民族文化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/5/n12084515.md#1">南投两国小一社区 获2020建筑园冶奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/4/14/n12879351.md#1">嘉市“步行散策 乐活水岸”获2021年建筑园冶奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/4/26/n12906497.md#1">浪漫织缘  赛德克与排湾族的编织对话</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/5/14/n12948844.md#1">彰化县再度荣获建筑园冶奖 绩效出色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688297.md#1">彰化马兴国小“AI积木教室”启用 儿童寓教于乐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688293.md#1">万兴国中食农教育 明道大学飨以南洋口味</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685583.md#1">台日动漫大赛各领风骚 大叶大学、大明高中联展</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685591.md#1">鼻塞流鼻水 竟是口腔癌</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">金雁：“既得利益者”何以成为反对苏维埃的先锋?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/22/n10414742.md#1" target="_blank">共产暴政录：文革抄家抢了多少财宝</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/14/n12950057.md#1">【未解之谜】肉身成佛？慧能真身千年不坏</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/12/n12944071.md#1">【未解之谜】流落人间的金箍棒 印度德里铁柱</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/4/19/n12891294.md#1">道门出败类 张三丰出手示警</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/21/n12964725.md#1">【拍案惊奇】物价速涨国人“躺平”美曝秘密部队</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12963789.md#1">【新闻看点】左晖病逝 张一鸣卸任引字节地震？</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12963139.md#1">【唐浩视界】中东火箭幕后黑手 台抗疫中共搅局</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12959579.md#1">唐凤推简讯实联制5秒搞定 免费且免填个资</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12961144.md#1">印度疫情惨 恒河飘大量浮尸 警方跨河拉网</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12960904.md#1">深圳大楼乱晃惊动美领馆 向美国人发警告</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12961232.md#1">医生父亲台湾前线抗疫 炎亚纶心疼喊话</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12962574.md#1">周子瑜拥有罕见手相 命理老师：她有天使气场</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12960010.md#1">《月薪娇妻》新垣结衣与星野源成为真夫妻</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/18/n12958844.md#1">香港歌手黎瑞恩胰脏长肿瘤 不做手术奇迹康复</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12961659.md#1">“很难在大陆拍戏”香港导演彭浩翔移居加拿大</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12959656.md#1">台湾确诊激增 日本作家却看好2防疫关键</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12960642.md#1">清冠一号治新冠好得快、无副作用？这类人不能吃</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
-<li><a href="https://github.com/uczxkr3180/djy/blob/master/gb/21/5/20/n12964027.md#1">新冠肺炎11大症状一次看！5种症状立刻看急诊</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uczxkr3180/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uczxkr3180/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/21/n12965757.htm">融入部落文化 赛德克文化馆获建筑园冶奖</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/21/n12965757.htm">融入部落文化 赛德克文化馆获建筑园冶奖</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uczxkr3180/djy/blob/master/gb/21/5/21/n12965757.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uczxkr3180/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uczxkr3180/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uczxkr3180/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uczxkr3180/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uczxkr3180/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/5/21/n12965757.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
